--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Miki</h1>
-    <h2> Hello penlo! <h2>
+  <div class="container">
+
+  <p id="para">Some text here</p> 
+  <div class="butt">
+      <button data-color ="red">Red</button>
+      <button data-color ="blue">blue</button>
+
+
+      
+  </div>
+  
+
+  </div>
 </body>
+
+<script src="main.js"></script>
 </html>
