--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
 <body>
   <div class="container">
 
-  <p id="para">Some text here</p> 
+  <p id="para">Somee text here</p> 
   <div class="butt">
-      <button data-color ="red">Red</button>
-      <button data-color ="blue">blue</button>
+      <button data-background="green" data-color ="red">Red</button>
+      <button data-background="yellow" data-color ="blue">blue</button>
 
 
       
   </div>
-  
+   <select>
+  <option value="white">white</option>
+ <option value="red">red</option>
+  <option value="black">black</option>
+
+
+
+
+
+   </select>
+  </div>
 
   </div>
 </body>
