--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="container">
 
-  <p id="para">Somee text here</p> 
-  <div class="butt">
+  <!-- Color changer  -->
+  <div class="container">
+   <h1>Color changer </h1>
+  <p id="para">The color will change here</p> 
+  <div class="first">
       <button data-background="green" data-color ="red">Red</button>
       <button data-background="yellow" data-color ="blue">blue</button>
-      <button data-background="white" data-color ="blue">green</button>
+      <button data-background="white" data-color ="pink">pink</button>
 
 
 
       
   </div>
-   <select>
-  <option value="white">white</option>
- <option value="red">red</option>
+   <select class="second">
   <option value="black">black</option>
+ <option value="white">white</option>
+  <option value="yellow">yellow</option>
 
 
 
@@ -30,8 +32,20 @@
 
    </select>
   </div>
-
+  <hr>
   </div>
+
+  <!--  Next counter project -->
+    <div class="counter">
+  <h1>Counter</h1>
+  <span id="value">0</span>
+  <div class="button-list">
+      <button class="btn decrease"> decrease</button>
+      <button class="btn reset"> reset</button>
+      <button class="btn increase"> increase</button>
+  </div>
+    </div>
+    <hr>
 </body>
 
 <script src="main.js"></script>
