--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">Color changer </h1>
   <p id="para">The color will change here</p> 
-  <div class="first">
+  <div class="para">
       <button data-background="green" data-color ="red">Red</button>
       <button data-background="yellow" data-color ="blue">blue</button>
       <button data-background="white" data-color ="green">green</button>
@@ -25,9 +25,10 @@
       
   </div>
    <select class="second ">
-  <option value="black">black</option>
- <option value="white">white</option>
-  <option value="yellow">yellow</option>
+  <option value="">SELECT COLOR</option>
+  <option value="black">BLACK</option>
+ <option value="white">WHITE</option>
+  <option value="yellow">YELLOW</option>
 
 
 
@@ -40,7 +41,7 @@
 
   <!--  Next counter project -->
     <div class="counter">
-  <h1 class="fix" data-aos="flip-left"
+  <h1  data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">Counter</h1>
   <span id="value">0</span>
@@ -66,5 +67,4 @@
 </script>
 
 </html>
-=======
->>>>>>> master
+
