--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div  class="container">
    <h1 data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
-     data-aos-duration="2000">Color changer </h1>
+     data-aos-duration="2000">Color Changer </h1>
   <p id="para">The color will change here</p> 
   <div class="para">
       <button data-background="green" data-color ="red">Red</button>
