tip calculator section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
       <button class="btn increase"> increase</button>
   </div>
     </div>
-    <hr>
+   
+
+
+    <!-- Tip calculator -->
+    <h1 class="update">Tip calculator</h1>
+    <div id="tip-container">
+        Bill Amount: <input id="bill-amount" type="number">
+        Tip Percentage: <input id="tip-percentage" type="number">
+        Tip Amount: <input id="tip-amount" type="number">
+        Total Bill: <input id="total-bill" type="number">
+        <button id="btn">Calculate</button>
+    </div>
 </body>
 
 <script src="main.js"></script>
