--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 
 
     <!-- Tip calculator -->
-    <h1 class="update">Tip calculator</h1>
+    <h1 class="update" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">Tip calculator</h1>
     <div id="tip-container">
         Bill Amount: <input id="bill-amount" type="number">
         Tip Percentage: <input id="tip-percentage" type="number">
