blury back ground page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         Total Bill: <input id="total-bill" type="number">
         <button id="btn">Calculate</button>
     </div>
+
+    <!-- blury background -->
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
 </body>
 
 <script src="main.js"></script>
